Registration logig settled

--- a/config/locales/ru.json
+++ b/config/locales/ru.json
@@ -10,5 +10,12 @@
 	"haveAnAccountEnter": "Есть аккаунт? Войти",
 	"toRegistration": "Зарегистрироваться",
 	"or": "Или",
-	"emailAddress": "Адрес электронной почты"
+	"emailAddress": "Адрес электронной почты",
+	"fieldEmpty": "Поле не заполнено",
+	"numberVerificationTitle": "Подтверждение номера телефона",
+	"codeSentToNumber": "Код подтверждения отправлен на номер",
+	"resendCode": "Отправить код повторно",
+	"typeIn": "Ввод",
+	"tooManyRequests": "Слишком быстрые запросы, пожалуйста подождите истечения прошлого кода и попробуйте снова.",
+	"mayBeAfter": "можно через"
 }
