Code error added and code field fixed

--- a/config/locales/ru.json
+++ b/config/locales/ru.json
@@ -17,5 +17,8 @@
 	"resendCode": "Отправить код повторно",
 	"typeIn": "Ввод",
 	"tooManyRequests": "Слишком быстрые запросы, пожалуйста подождите истечения прошлого кода и попробуйте снова.",
-	"mayBeAfter": "можно через"
+	"mayBeAfter": "можно через",
+	"wrongCode": "Введен неправильный код",
+	"expiredCode": "Срок действия кода истёк, запросите новый",
+	"codeMainError": "Ошибка при проверке кода, попробуйте позже"
 }
