moving to REST + reset password and tooltips

--- a/config/locales/ru.json
+++ b/config/locales/ru.json
@@ -13,12 +13,25 @@
 	"emailAddress": "Адрес электронной почты",
 	"fieldEmpty": "Поле не заполнено",
 	"numberVerificationTitle": "Подтверждение номера телефона",
-	"codeSentToNumber": "Код подтверждения отправлен на номер",
+	"codeSentTo": "Код подтверждения отправлен на",
 	"resendCode": "Отправить код повторно",
 	"typeIn": "Ввод",
-	"tooManyRequests": "Слишком быстрые запросы, пожалуйста подождите истечения прошлого кода и попробуйте снова.",
+	"tooManyRequests": "Слишком быстрые запросы, пожалуйста подождите и попробуйте снова.",
 	"mayBeAfter": "можно через",
 	"wrongCode": "Введен неправильный код",
 	"expiredCode": "Срок действия кода истёк, запросите новый",
-	"codeMainError": "Ошибка при проверке кода, попробуйте позже"
+	"codeMainError": "Ошибка при проверке кода, попробуйте позже",
+	"errorRequestingNewCode": "Слишком много неверных попыток, попробуйте позже",
+	"getCode": "Получить код",
+	"resetPasswordFormTitle": "Восстановление пароля",
+	"typeInNewPassword": "Введите новый пароль",
+	"typeInNewPasswordAgain": "Повторите новый пароль",
+	"tryOtherEmail": "Этот email уже занят",
+	"tryOtherPhone": "Этот номер телефона уже занят",
+	"wrongEmail": "Введён недопустимый email",
+	"wrongPhone": "Введён недопустимый номер",
+	"passwordConditions": "Пароль от 8 символов\nДолжен содержать цифры и латинские буквы\nДопускается использование спецсимволов",
+	"passwordsNotEqual": "Пароли должны совпадать",
+	"wrongCredentials": "Данные для входа неверны. Попробуйте ещё раз или зарегистрируйтесь",
+	"userNotFound": "Пользователь не найден"
 }
